# mural-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: database.py  settings.py
app/middleware/: error_handler.py
app/models/: artista.py  avaliacao.py  local.py  mural.py  usuario.py
app/routes/: artistas.py  avaliacoes.py  locais.py  murais.py  usuarios.py
app/services/: __init__.py  artista_service.py  avaliacao_service.py  base.py  local_service.py  mural_service.py  usuario_service.py
examples/: sample_data.json  test_api.sh
